iter_language/tests/corpus/invalid/bad-string.iter
workspace local { base = "unterminated
}
runner { continue_on_error = false  behavior = wait }
